--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
       uses: microsoft/setup-msbuild@v1
     
     - name: Build
-      run: msbuild gather-standalone.sln /p:Configuration=Release /p:Platform=AnyCPU
+      run: msbuild "PlanningCenter to OPS.sln" /p:Configuration=Release /p:Platform=AnyCPU
     - name: release
       uses: zendesk/action-create-release@v1
       id: create_release
@@ -33,6 +33,6 @@ jobs:
         GITHUB_TOKEN: ${{ github.token }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: PlanningCenter to OPS\bin\Release\PlanningCenter to OPS.exe
-        asset_name: PlanningCenter to OPS.exe
+        asset_path: "PlanningCenter to OPS\\bin\\Release\\PlanningCenter to OPS.exe"
+        asset_name: "PlanningCenter to OPS.exe"
         asset_content_type: application/exe
