--- a/PlanningCenter to OPS/App.config
+++ b/PlanningCenter to OPS/App.config
@@ -19,6 +19,24 @@
             <setting name="song_folder" serializeAs="String">
                 <value>C:\OPS_Songs</value>
             </setting>
+            <setting name="opw_selector_enabled" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="kopw_selector_enabled" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="opw_selector" serializeAs="String">
+                <value>*</value>
+            </setting>
+            <setting name="kopw_selector" serializeAs="String">
+                <value>kopw *</value>
+            </setting>
+            <setting name="opw_case_sensitive" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="kopw_case_sensitive" serializeAs="String">
+                <value>False</value>
+            </setting>
         </PlanningCenter_to_OPS.Properties.Settings>
     </userSettings>
 </configuration>
