--- a/PlanningCenter to OPS/Properties/Settings.settings
+++ b/PlanningCenter to OPS/Properties/Settings.settings
@@ -11,5 +11,23 @@
     <Setting Name="song_folder" Type="System.String" Scope="User">
       <Value Profile="(Default)">C:\OPS_Songs</Value>
     </Setting>
+    <Setting Name="opw_selector_enabled" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
+    <Setting Name="kopw_selector_enabled" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
+    <Setting Name="opw_selector" Type="System.String" Scope="User">
+      <Value Profile="(Default)">*</Value>
+    </Setting>
+    <Setting Name="kopw_selector" Type="System.String" Scope="User">
+      <Value Profile="(Default)">kopw *</Value>
+    </Setting>
+    <Setting Name="opw_case_sensitive" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="kopw_case_sensitive" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
