--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,6 +34,6 @@ jobs:
         GITHUB_TOKEN: ${{ github.token }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: "PlanningCenter to OPS\\bin\\Release\\PlanningCenter to OPS.exe"
+        asset_path: "PlanningCenter to OPS\\bin\\Release\\net7.0-windows\\PlanningCenter to OPS.exe"
         asset_name: "PlanningCenter to OPS.exe"
         asset_content_type: application/exe
