--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,17 +6,28 @@ on:
 jobs:
   build:
 
-    runs-on: windows-2022
+    runs-on: windows-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     
     - name: setup MS-build
       uses: microsoft/setup-msbuild@v1
-    - name: Nuget restore
-      run: nuget restore 
-    - name: Build "PlanningCenter to OPS.sln"
-      run: msbuild "PlanningCenter to OPS.sln" /p:Configuration=Release /p:Platform="Any CPU"
+      
+    - name: Install .NET Core
+      uses: actions/setup-dotnet@v3
+      with:
+        dotnet-version: 7.0.x
+      
+    - name: setup MS-build
+      uses: microsoft/setup-msbuild@v1.1
+        
+    - name: Build
+      run: msbuild "PlanningCenter to OPS.sln" /t:Restore /p:Configuration=Release /p:Platform="Any CPU"
+    
+    - name: Run publish
+      run: dotnet publish -c Release -p:PublishSingleFile=true --self-contained false "PlanningCenter to OPS\\PlanningCenter to OPS.csproj"
+      
     - name: release
       uses: zendesk/action-create-release@v1
       id: create_release
@@ -34,6 +45,6 @@ jobs:
         GITHUB_TOKEN: ${{ github.token }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: "PlanningCenter to OPS\\bin\\Release\\net7.0-windows\\PlanningCenter to OPS.exe"
+        asset_path: "PlanningCenter to OPS\\bin\\Release\\net7.0-windows\\win-x64\\publish\\PlanningCenter to OPS.exe"
         asset_name: "PlanningCenter to OPS.exe"
         asset_content_type: application/exe
