eigen teksten toevoegen als optie

--- a/PlanningCenter to OPS/App.config
+++ b/PlanningCenter to OPS/App.config
@@ -37,6 +37,15 @@
             <setting name="kopw_case_sensitive" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="et_enabled" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="et_abbreviation" serializeAs="String">
+                <value>et</value>
+            </setting>
+            <setting name="et_bundle_name" serializeAs="String">
+                <value>Eigen teksten</value>
+            </setting>
         </PlanningCenter_to_OPS.Properties.Settings>
     </userSettings>
 </configuration>
