start of adding ops themes

--- a/PlanningCenter to OPS/App.config
+++ b/PlanningCenter to OPS/App.config
@@ -46,6 +46,9 @@
             <setting name="et_bundle_name" serializeAs="String">
                 <value>Eigen teksten</value>
             </setting>
+            <setting name="last_used_ops_theme" serializeAs="String">
+                <value />
+            </setting>
         </PlanningCenter_to_OPS.Properties.Settings>
     </userSettings>
 </configuration>
