--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,13 +1,12 @@
-name: .NET
-
 on:
   workflow_dispatch:
-
+  push:
+    branches:
+      - master
+name: Create Release
 jobs:
   build:
-
     runs-on: windows-latest
-
     steps:
     - uses: actions/checkout@v3
     
@@ -29,16 +28,11 @@ jobs:
       run: dotnet publish -c Release -p:PublishSingleFile=true --self-contained false "PlanningCenter to OPS\\PlanningCenter to OPS.csproj"
       
     - name: release
-      uses: zendesk/action-create-release@v1
       id: create_release
-      with:
-        tag_name: Latest
-        release_name: Latest
-        draft: false
-        prerelease: false
-        body_path: CHANGELOG.md
+      uses: zendesk/action-create-release@v1
       env:
         GITHUB_TOKEN: ${{ github.token }}
+        
     - name: upload windows artifact
       uses: actions/upload-release-asset@v1
       env:
