--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,11 +27,19 @@ jobs:
     - name: Run publish
       run: dotnet publish -c Release -p:PublishSingleFile=true --self-contained false "PlanningCenter to OPS\\PlanningCenter to OPS.csproj"
       
-    - name: release
+    - name: Bump version and push tag
+      id: tag_version
+      uses: mathieudutour/github-tag-action@v6.1
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        
+    - name: Create a GitHub release
       id: create_release
-      uses: zendesk/action-create-release@v2
-      env:
-        GITHUB_TOKEN: ${{ github.token }}
+      uses: ncipollo/release-action@v1
+      with:
+        tag: ${{ steps.tag_version.outputs.new_tag }}
+        name: Release ${{ steps.tag_version.outputs.new_tag }}
+        body: ${{ steps.tag_version.outputs.changelog }}
         
     - name: upload windows artifact
       uses: actions/upload-release-asset@v1
