--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,12 +1,18 @@
+name: Create Release
 on:
   workflow_dispatch:
   push:
     branches:
       - master
-name: Create Release
+permissions:
+  contents: read # for checkout
 jobs:
-  build:
+  release:
+    name: Add release to GitHub
     runs-on: windows-latest
+    permissions:
+      contents: write # to be able to publish a GitHub release
+      pull-requests: write # to be able to comment on released pull requests
     steps:
     - uses: actions/checkout@v3
     
